--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-data-grid": "^7.0.0-canary.36",
     "react-dom": "^17.0.1",
+    "react-media-hook": "^0.4.9",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
